0.4.8
- Feature: Added a field for "times and places" to the event record (#381)
- Feature: In the details view, show events starting the next day (#379)
- Change: Make the names of the attendees required if more than one seat is reserved (#472)
- Feature: List view of all topics (#300)
- Feature: Added default VIPs that are able to see all registrations on all events (#437)
- Feature: List other dates for the same event topic (#299)
- Fix: SQL Errors in the registration form (#473)
- Change: Make choice of payment method obligatory in the registration form (#471)
- Feature: Redirect user to registration page after login (#376)
- Feature: Add billing address to attendance record (#431)
- Feature: Confirmation page before registering for an event (#374)
- Change: Moved all record type icons to a subdirectory (#469)
- Feature: Added some checking for the early bird prices and the deadline (#335)
- Change: Added a new RTE field in the seminar record (#453)
- Feature: Checkbox "I accept the terms" on registration (#378)
- Feature: Allow selection of payment method (#434)
- Improved the manual (#380)
- Change: HTML output of the early bird prices in single view (#423)
- Change: Added some new and replaced some existing icons (#493)
- Change: HTML output of speakers and organizers in list view (#421)
- Change: Switch the registration from frontendformslib to FORMidable (#433)
- Feature: Allow to edit existing seminars (#309)
- Feature: Allow to enter an event in the FE (#307)
- Feature: List of the events a FE user has entered (#309)
- Fix: Deletion of content elements in front-end editing mode fails (#322)
- Change: Rename the registration link from "register online" to "register now" (#405)
- Feature: Registration form: Add a field for the name of additional attendees (#377)
- Fix: Localisation for early bird prices (#325)
- Feature: Add a switch to allow multiple registrations (#375)