@@ -83,6 +83,21 @@
 							</config>
 						</TCEforms>
 					</listPID>
+					<detailPID>
+						<TCEforms>
+							<exclude>1</exclude>
+							<label>LLL:EXT:seminars/pi1/locallang.php:seminars.pi_flexform.detailPID</label>
+							<config>
+								<type>group</type>
+								<internal_type>db</internal_type>
+								<allowed>pages</allowed>
+								<size>1</size>
+								<maxitems>1</maxitems>
+								<minitems>0</minitems>
+								<show_thumbs>1</show_thumbs>
+							</config>
+						</TCEforms>
+					</detailPID>
 					<registerPID>
 						<TCEforms>
 							<exclude>1</exclude>
