@@ -204,6 +204,9 @@ plugin.tx_seminars_pi1 {
 	# PID of the page that contains the seminar list
 	listPID =
 
+	# PID of the page that contains the detailed view
+	detailPID =
+
 	# PID of the page that contains the seminar registration plug-in
 	registerPID =
 
